homelab/silver-hand/old/jafner-dev/jafner-dev.pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  namespace: jafner-dev
  name: nginx
  labels:
    app: jafner-dev
    dataset.0.id: "jafner-dev"
    dataset.0.useas: "mount"
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
      name: http
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: "jafner-dev"
  volumes:
  - name: "jafner-dev"
    persistentVolumeClaim:
      claimName: "jafner-dev"
