homelab/silver-hand/old/jafner-dev/jafner-dev.service.yml
---
apiVersion: v1
kind: Service
metadata: 
  namespace: jafner-dev
  name: jafner-dev-service
spec:
  type: LoadBalancer
  selector:
    app: jafner-dev
  ports:
  - port: 80
    targetPort: 80
