homelab/silver-hand/old/jafner-dev/jafner-dev.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jafner-dev
  name: jafner-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: jafner-dev
  rules:
  - host: "jafner-dev.k3s.jafner.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service: 
            name: jafner-dev-service
            port:
              number: 80
